--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,10 +5,10 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
-  imageName: azure-pipelines-canary-k8s # name of ACR image
-  dockerRegistryServiceConnection: azure-pipelines-canary-acr1 # name of ACR service connection
-  imageRepository: 'azure-pipelines-canary-k8s' # name of image repository
-  containerRegistry: kelljonsnewacr.azurecr.io # name of Azure container registry
+  imageName: azure-pipelines-canary-k8s
+  dockerRegistryServiceConnection: azure-pipelines-canary-acr1
+  imageRepository: 'azure-pipelines-canary-k8s'
+  containerRegistry: kelljonsnewacr.azurecr.io #update with container registry
   tag: '$(Build.BuildId)'
 
 stages:
@@ -29,3 +29,62 @@ stages:
         Dockerfile: app/Dockerfile
         tags: |
           $(tag)
+
+    - publish: manifests
+      artifact: manifests
+
+    - publish: misc
+      artifact: misc
+
+- stage: DeployCanary
+  displayName: Deploy canary
+  dependsOn: Build
+  condition: succeeded()
+
+  jobs:
+  - deployment: Deploycanary
+    displayName: Deploy canary
+    pool:
+      vmImage: ubuntu-latest
+    environment: 'akscanary'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: KubernetesManifest@1
+            displayName: Create Docker Registry Secret
+            inputs:
+              action: 'createSecret'
+              connectionType: 'azureResourceManager'
+              azureSubscriptionConnection: 'azure-pipelines-canary-sc'
+              azureResourceGroup: 'Aksdemo1'
+              kubernetesCluster: 'kelljonsAKS'
+              secretType: 'dockerRegistry'
+              secretName: 'my-acr-secret'
+              dockerRegistryEndpoint: 'azure-pipelines-canary-acr'
+
+          - task: KubernetesManifest@1
+            displayName: Deploy to Kubernetes cluster
+            inputs:
+              action: 'deploy'
+              connectionType: 'azureResourceManager'
+              azureSubscriptionConnection: 'azure-pipelines-canary-sc'
+              azureResourceGroup: 'Aksdemo1'
+              kubernetesCluster: 'kelljonsAKS'
+              strategy: 'canary'
+              percentage: '25'
+              manifests: |
+                $(Pipeline.Workspace)/manifests/deployment.yml
+                $(Pipeline.Workspace)/manifests/service.yml
+              containers: '$(containerRegistry)/$(imageRepository):$(tag)'
+              imagePullSecrets: 'my-acr-secret'
+
+          - task: KubernetesManifest@1
+            displayName: Deploy Forbio to Kubernetes cluster
+            inputs:
+              action: 'deploy'
+              connectionType: 'azureResourceManager'
+              azureSubscriptionConnection: 'azure-pipelines-canary-sc'
+              azureResourceGroup: 'Aksdemo1'
+              kubernetesCluster: 'kelljonsAKS'
+              manifests: '$(Pipeline.Workspace)/misc/*'
